Correctly align the header content changed the placeholder image to placeholder2

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    /* overflow: visible; */
 }
 a {
     text-decoration: none;
@@ -41,21 +42,36 @@ ul {
     font-size: 14px;
 }
 .header,.secondary-head-container{
-    width: 700px;
+    width: 70%;
 }
 .secondary-head-container {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 80px 0px;
     gap: 40px;
+    height: auto;
 }
 .awesome-text{
-    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 400px;
     color:#f3f3f4;
     
 }
+.hero-img {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .hero-img img {
-    width: 340px;
-    height: 230px;
+    /* width: 400px;
+    height: 100%; */
+    width: 100%;    
+    height: auto;
+    max-width: 400px;
 }
 .awesome-text h2 {
     font-size: 48px;
@@ -64,6 +80,9 @@ ul {
     margin: 0px;
 }
 .sign-btn{
+    width: 100px;
+    cursor: pointer;
+    border: none;
     text-align: center;
     font-weight: bold;
     padding: 10px 20px;
